--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1307,7 +1307,7 @@ Additionally, it correctly represents sampled ancestors on the tree as nodes, ea
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[width=0.85\textwidth,angle=0]{\ResourcePath figures/summary_tree.pdf}
+\includegraphics[width=0.95\textwidth,angle=0]{\ResourcePath figures/summary_tree.pdf}
 \caption{\small Maximum sampled ancestor clade credibility (MSACC) tree of bear species used in this tutorial. Numbers above fossil nodes indicate the posterior probability of being a sampled ancestor.}
 \end{minipage}}
 \label{fig:IcyTreeSumm}
@@ -1316,12 +1316,12 @@ Additionally, it correctly represents sampled ancestors on the tree as nodes, ea
 {\begin{framed}
 Navigate to \url{http://tgvaughan.github.io/icytree} and open the file \cl{output/bears.mcc.tre} in {\tt IcyTree}.
 
-\QUEST Try to replicate Fig.\ \ref{fig:IcyTreeSumm}. (Hint: \mi{Style\textrightarrow Mark Singletons})
+\QUEST Try to replicate the tree in Fig.\ \ref{fig:IcyTreeSumm}. (Hint: \mi{Style\textrightarrow Mark Singletons})
 Why might a node with a sampled ancestor be referred to as a singleton? 
 
 \QUEST How can you see the names of the fossils that are putative sampled ancestors?
 
-\QUEST Try mousing over a branch (see Fig\ \ref{fig:IcyTreeScreenshort}).
+\QUEST Try mousing over different branches (see Fig\ \ref{fig:IcyTreeScreenshort}).
 What are the fields telling you?
 Is the age of the \textit{Kretzoiarctos beatrix} fossil the same as what was shown in {\tt Tracer}? 
 
