--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -3623,6 +3623,19 @@ Gives also a introduction what else can be used and what is good and bad in ML, 
   Timestamp                = {2013.05.08}
 }
 
+@InCollection{Heath2013,
+  Title                    = {Bayesian inference of species divergence times},
+  Author                   = {T. A. Heath and B. R. Moore},
+  Booktitle                = {Bayesian Phylogenetics: Methods, Algorithms, and Applications},
+  Publisher                = {Chapman \& Hall/CRC},
+  Year                     = {2014},
+  Address                  = {Boca Raton, FL},
+  Editor                   = {M.-H. Chen and L. Kuo and P. O. Lewis},
+  Pages                    = {277--318},
+  Series                   = {Chapman \& Hall/CRC Mathematical and Computational Biology}
+}
+
+
 @Article{Heath2014,
   Title                    = {{The fossilized birth-death process for coherent calibration of divergence-time estimates}},
   Author                   = {Heath, Tracy A and Huelsenbeck, John P and Stadler, Tanja},
