minor formatting edits

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -197,6 +197,14 @@ Therefore, it is important to use models that can condition on this data-acquisi
 \subsubsection{The Morphological Clock}\label{subsub:Intro-MorphClock}
 
 %TODO write about the morphological clock
+\begin{figure}[b!]
+\fbox{%
+\begin{minipage}{\textwidth}\centering
+\includegraphics[scale=0.25,angle=0]{\ResourcePath figures/tikz/morph_clock_gm}
+\caption{\small The graphical-model representation of the branch-rate model governing the evolution of morphological characters. This model is consistent with a strict morphological clock, where every branch has the same rate of change ($c$) and that rate is drawn from an exponential distribution with a rate parameter of $\delta_c$.}
+\end{minipage}}
+\label{fig:morph_clock_gm}
+\end{figure} 
 
 Just like with the molecular data (section \ref{subsub:Intro-GTR-UExp}), our observations of discrete morphological characters are conditional on the rate of change along each branch in the tree. 
 This model component defines the \textsf{Branch Rate Model} of the \textsf{Morphological Data} in the generalized graphical model shown in figure \ref{fig:module-gm}.
@@ -204,15 +212,8 @@ The relaxed clock model we described for the molecular data in section \ref{subs
 For the morphological data, we will instead use a ``strict clock'' model \citep{Zuckerkandl1962}, in which the rate of discrete character change is assumed to be constant throughout the tree.
 The strict clock is the simplest morphological branch rate model we can construct (graphical model shown in Fig.\ \ref{fig:morph_clock_gm}).
 
-\begin{figure}[h!]
-\fbox{%
-\begin{minipage}{\textwidth}\centering
-\includegraphics[scale=0.25,angle=0]{\ResourcePath figures/tikz/morph_clock_gm}
-\caption{\small The graphical-model representation of the branch-rate model governing the evolution of morphological characters. This model is consistent with a strict morphological clock, where every branch has the same rate of change ($c$) and that rate is drawn from an exponential distribution with a rate parameter of $\delta_c$.}
-\end{minipage}}
-\label{fig:morph_clock_gm}
-\end{figure}
 
+\bigskip
 \bigskip
 \section{Example: Estimating the Phylogeny and Divergence Times of Fossil and Extant Bears}\label{sect:Exercise}
 
